--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,10 @@ version: '3.4'
 services:
   catalogdb:
      image: mongo
+  basketdb:
+    image: redis:alpine
+  portainer:
+    image: portainer/portainer-ce
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -10,5 +14,13 @@ services:
       context: .
       dockerfile: src/Catalog.API/Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: src/Services/Basket/Basket.API/Dockerfile
+
 volumes:
-  mongo_data: 
+  mongo_data:
+  portainer_data:
+
